--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,6 @@
     "declaration": false,
     "removeComments": true
   },
-  "include": ["src/**/*", "api/**/*"],
+  "include": ["api/**/*", "api/**/*"],
   "exclude": ["node_modules", "dist"]
 }
