--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@aws-sdk/client-ecs": "^3.844.0",
     "@aws-sdk/client-s3": "^3.844.0",
     "@supabase/supabase-js": "^2.50.5",
-    "@vercel/node": "^3.0.0"
+    "@vercel/node": "^3.0.0",
+    "fastify": "^5.4.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
